# fprime-scales-ref

./: .gitignore  .gitmodules  CMakeLists.txt  Images  JETSON_ML_DEPS.md  Makefile  README.md  batch-send-img.seq  fsw.sh  jetson-python.sh  jetson-startup.sh  patch_api_cmake_comment_lines.sh  project.cmake  requirements-fprime.txt  requirements-jetson-ml.txt  requirements-ml.txt  settings.ini
Components/: CMakeLists.txt
Components/CmdSequenceForwarder/: CMakeLists.txt  CmdSequenceForwarder.cpp  CmdSequenceForwarder.hpp
Components/CmdSequenceForwarder/docs/: sdd.md
Components/MLComponent/: CMakeLists.txt  MLComponent.fpp  MLComponent.py  MLComponent.template.py
Components/MLComponent/Scales-ML/: .gitignore  README.md  tegrastats_avg.py
Components/MLComponent/Scales-ML/depth/: depthanything.py  depthanything_cifar100.py
Components/MLComponent/Scales-ML/hugging_face/misc/: audio.py
Components/MLComponent/Scales-ML/mnist/: inference.py  model.py  onnx_inferencing.py  output_log.csv  pytorch_training.py  tegrastats_reader.py  training.py
Components/MLComponent/Scales-ML/nannyml/: cbpe_esitmator.py  estimator_test.py  nanny_resnet.py  ref_df  reference_df
Components/MLComponent/Scales-ML/resnet/: resnet_cifar100.py  resnet_inference.py  resnet_training_hg.py
Components/MLComponent/Scales-ML/yolo_project/: camera_torch.py
Components/MLComponent/docs/: sdd.md
Components/PythonComponent/: CMakeLists.txt  PythonComponent.py
Components/RunLucidCamera/: CMakeLists.txt  RunLucidCamera.cpp  RunLucidCamera.fpp  RunLucidCamera.hpp
Components/RunLucidCamera/docs/: sdd.md
GDS-Dictionary/: GDSDictionary.xml  ImxDeploymentTopologyAppDictionary.xml  JetsonDeploymentTopologyAppDictionary.xml  merge-automate.sh  merger.py  run-gds.sh  test-imx-only.sh  test-jetson-only.sh
ImxDeployment/: CMakeLists.txt  Main.cpp  README.md  fprime-gds.yml
ImxDeployment/Top/: CMakeLists.txt  ImxDeploymentPackets.fppi  ImxDeploymentPackets.xml  ImxDeploymentTopology.cpp  ImxDeploymentTopology.hpp  ImxDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
JetsonDeployment/: CMakeLists.txt  Main.cpp  README.md  fsw_main.py
JetsonDeployment/Components/MLComponent/: CMakeLists.txt
JetsonDeployment/Components/MLComponent/Scales-ML/mnist/: pytorch_inferencing.py  pytorch_to_onnx.py
JetsonDeployment/Components/MLComponent/Scales-ML/nannyml/: analysis_df  image_monitoring.py
JetsonDeployment/Components/MLComponent/Scales-ML/phi3/: ph3.py
JetsonDeployment/Components/MLComponent/Scales-ML/yolo_project/: camera.py
JetsonDeployment/Components/RunLucidCamera/: RunLucidCamera.cpp  RunLucidCamera.fpp  RunLucidCamera.hpp
JetsonDeployment/Top/: CMakeLists.txt  JetsonDeploymentPackets.fppi  JetsonDeploymentPackets.xml  JetsonDeploymentTopology.cpp  JetsonDeploymentTopology.hpp  JetsonDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
build-python-fprime/: resnet_fps.py
build-python-fprime-aarch64-linux/: fprime_pybind.py  resnet_reference_gen.py  resnet_test_2.py
lib/: CMakeLists.txt  README.md
lib/ArenaSDK/: .gitignore  ArenaSDK_v0.1.77_Linux_ARM64.tar.xz  CMakeLists.txt  README_ARM64
scripts/: jetson-python.sh  ml_trt_setup.sh
